# SnapScribe

./: CMakeLists.txt  Imaging_en_US.ts  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
